# crdb-schema-exporter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-ci.yml
crdb_schema_dumps/movr/: movr_schema.json  movr_schema.sql
crdb_schema_exporter/: exporter.py
crdb_schema_exporter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_runner.py
